--- a/app/src/main/res/layout/extra_details.xml
+++ b/app/src/main/res/layout/extra_details.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2016 The Android Open Source Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,104 +11,106 @@
      limitations under the License.
 -->
 
-<layout>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/extra_details"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="16dp"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingEnd="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- This guideline divides the layout into a left and right half and is used for alignment -->
-    <android.support.constraint.Guideline
-        android:id="@+id/horizontal_middle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="271dp" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/extra_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp">
 
-    <!-- Lowest temp label -->
-    <TextView
-        android:id="@+id/min_temp_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="@string/min_temp_label"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/max_temp_label"
-        app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
-        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/extra_details" />
+        <!-- This guideline divides the layout into a left and right half and is used for alignment -->
+        <android.support.constraint.Guideline
+            android:id="@+id/horizontal_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7" />
 
-    <!-- Highest temp -->
-    <TextView
-        android:id="@+id/low_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/min_temp_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/horizontal_middle"
-        app:layout_constraintTop_toTopOf="@+id/min_temp_label"
-        tools:text="19\u00b0" />
+        <!-- Lowest temp label -->
+        <TextView
+            android:id="@+id/min_temp_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/forecast_detail_horizontal_padding"
+            android:fontFamily="sans-serif"
+            android:text="@string/min_temp_label"
+            android:textColor="@color/primary_text"
+            app:layout_constraintBottom_toTopOf="@+id/max_temp_label"
+            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
+            app:layout_constraintTop_toTopOf="@+id/extra_details" />
 
-    <TextView
-        android:id="@+id/low_temp_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/secondary_text_light_nodisable"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/low_temp"
-        app:layout_constraintStart_toStartOf="@id/low_temp"
-        app:layout_constraintTop_toBottomOf="@+id/low_temp"
-        tools:text="03:30 AM" />
+        <!-- Highest temp -->
+        <TextView
+            android:id="@+id/low_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/low_temp"
+            android:textSize="@dimen/high_low_temp_text_size"
+            app:layout_constraintBottom_toBottomOf="@+id/min_temp_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/horizontal_middle"
+            app:layout_constraintTop_toTopOf="@+id/min_temp_label"
+            tools:text="19\u00b0" />
 
-    <!-- Lowest temp label -->
-    <TextView
-        android:id="@+id/max_temp_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="@string/maximum_temp_label"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/extra_details"
-        app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
-        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/min_temp_label" />
+        <TextView
+            android:id="@+id/low_temp_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/secondary_text"
+            app:layout_constraintEnd_toEndOf="@+id/low_temp"
+            app:layout_constraintStart_toStartOf="@id/low_temp"
+            app:layout_constraintTop_toBottomOf="@+id/low_temp"
+            tools:text="03:30 AM" />
 
-    <!-- Lowest temp -->
-    <TextView
-        android:id="@+id/high_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/max_temp_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/horizontal_middle"
-        app:layout_constraintTop_toTopOf="@+id/max_temp_label"
-        tools:text="23\u00b0" />
+        <!-- Lowest temp label -->
+        <TextView
+            android:id="@+id/max_temp_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/forecast_detail_horizontal_padding"
+            android:fontFamily="sans-serif"
+            android:text="@string/maximum_temp_label"
+            android:textColor="@color/primary_text"
+            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
+            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
+            app:layout_constraintTop_toBottomOf="@+id/min_temp_label" />
 
-    <TextView
-        android:id="@+id/high_temp_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/secondary_text_light_nodisable"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/high_temp"
-        app:layout_constraintStart_toStartOf="@id/high_temp"
-        app:layout_constraintTop_toBottomOf="@+id/high_temp"
-        tools:text="08:30 PM" />
-</android.support.constraint.ConstraintLayout>
+        <!-- Lowest temp -->
+        <TextView
+            android:id="@+id/high_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/high_temp"
+            android:textSize="@dimen/high_low_temp_text_size"
+            app:layout_constraintBottom_toBottomOf="@+id/max_temp_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/horizontal_middle"
+            app:layout_constraintTop_toTopOf="@+id/max_temp_label"
+            tools:text="23\u00b0" />
+
+        <TextView
+            android:id="@+id/high_temp_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/secondary_text"
+            app:layout_constraintEnd_toEndOf="@+id/high_temp"
+            app:layout_constraintStart_toStartOf="@id/high_temp"
+            app:layout_constraintTop_toBottomOf="@+id/high_temp"
+            tools:text="08:30 PM" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
