--- a/app/src/main/res/layout/thermometer.xml
+++ b/app/src/main/res/layout/thermometer.xml
@@ -23,94 +23,102 @@
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 <layout>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-     - This Guideline divides the screen into a left half and a right half and is used to    -
-     - anchor the views to the middle of the screen.                                         -
-     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <android.support.constraint.Guideline
-        android:id="@+id/horizontal_middle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
+        android:layout_height="wrap_content">
 
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-     - Selected day's date                                                                   -
-     -                                                                                       -
-     - You may notice that the line android:fontFamily="sans-serif" is highlighted in        -
-     - yellow. The reason for the highlighted line is that the fontFamily attribute is not   -
-     - available on versions of Android before 16, and our minimum supported version of      -
-     - Android is 10. This - particular issue won't break the app, but you should note that  -
-     - this attribute will be - ignored on devices that run an Android version less than 16. -
-     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    <TextView
-        android:id="@+id/textview_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/icon"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="Saturday, September 24" />
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+         - This Guideline divides the screen into a left half and a right half and is used to    -
+         - anchor the views to the middle of the screen.                                         -
+         - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <android.support.constraint.Guideline
+            android:id="@+id/horizontal_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4" />
 
-    <!-- Icon indicating weather condition -->
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/icon_temperature"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/horizontal_middle"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+         - Selected day's date                                                                   -
+         -                                                                                       -
+         - You may notice that the line android:fontFamily="sans-serif" is highlighted in        -
+         - yellow. The reason for the highlighted line is that the fontFamily attribute is not   -
+         - available on versions of Android before 16, and our minimum supported version of      -
+         - Android is 10. This - particular issue won't break the app, but you should note that  -
+         - this attribute will be - ignored on devices that run an Android version less than 16. -
+         - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <TextView
+            android:id="@+id/textview_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/current_temp_bottom_margin"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/current_temp_detail_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/icon"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="Saturday, September 24" />
 
-    <!-- Name of Thermometer -->
-    <TextView
-        android:id="@+id/textview_therm_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        tools:text="Home"
-        android:textSize="20sp"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintLeft_toLeftOf="@+id/icon"
-        app:layout_constraintRight_toRightOf="@+id/icon"
-        app:layout_constraintTop_toBottomOf="@+id/icon" />
+        <!-- Icon indicating weather condition -->
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="@dimen/current_temp_icon"
+            android:layout_height="@dimen/current_temp_icon"
+            android:adjustViewBounds="true"
+            android:src="@drawable/icon_main"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/horizontal_middle"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <!--Current Temperature-->
-    <TextView
-        android:id="@+id/textview_temperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="68sp"
-        app:layout_constraintBottom_toBottomOf="@+id/icon"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/icon"
-        tools:text="19\u00b0" />
+        <!-- Name of Thermometer -->
+        <TextView
+            android:id="@+id/textview_therm_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/current_temp_detail_text_top_margin"
+            android:textSize="@dimen/current_temp_detail_text_size"
+            android:textColor="@color/primary_text"
+            android:fontFamily="sans-serif-light"
+            app:layout_constraintHorizontal_bias="0.52"
+            app:layout_constraintLeft_toLeftOf="@+id/icon"
+            app:layout_constraintRight_toRightOf="@+id/icon"
+            app:layout_constraintTop_toBottomOf="@+id/icon"
+            tools:text="Home" />
 
-    <TextView
-        android:id="@+id/textview_current_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/secondary_text_light_nodisable"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/textview_temperature"
-        app:layout_constraintLeft_toLeftOf="@+id/icon"
-        app:layout_constraintRight_toRightOf="@+id/icon"
-        app:layout_constraintStart_toStartOf="@+id/textview_temperature"
-        app:layout_constraintTop_toBottomOf="@+id/textview_temperature"
-        tools:text="12:15 PM" />
+        <!--Current Temperature-->
+        <TextView
+            android:id="@+id/textview_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textSize="@dimen/current_temp_text_size"
+            android:textColor="@color/primary_text"
+            app:layout_constraintBottom_toBottomOf="@+id/icon"
+            app:layout_constraintHorizontal_bias="0.45"
+            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/icon"
+            tools:text="19\u00b0" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/textview_current_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/current_temp_detail_top_margin"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/current_temp_detail_text_size"
+            app:layout_constraintEnd_toEndOf="@+id/textview_temperature"
+            app:layout_constraintLeft_toLeftOf="@+id/icon"
+            app:layout_constraintRight_toRightOf="@+id/icon"
+            app:layout_constraintStart_toStartOf="@+id/textview_temperature"
+            app:layout_constraintTop_toBottomOf="@+id/textview_temperature"
+            tools:text="12:15 PM" />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
