--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#0277BD</color>
+    <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="primary_text">@color/white</color>
+    <color name="white">#FFFFFF</color>
+    <color name="secondary_text">@android:color/secondary_text_light_nodisable</color>
+    <color name="high_temp">#F9A825</color>
+    <color name="low_temp">#81D4FA</color>
 </resources>
