--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,23 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="forecast_detail_horizontal_padding">32dp</dimen>
+    <dimen name="forecast_detail_vertical_padding">16dp</dimen>
+
+    <dimen name="current_temp_detail_text_top_margin">8dp</dimen>
+
+    <!-- Text Sizes - We are using DP here rather than SP because these are already large
+     font sizes, and going larger will cause lots of view problems.  This is only for
+     the large forecast numbers in the forecast list -->
+    <dimen name="high_low_temp_text_size">28dp</dimen>
+
+    <!-- Icon Sizes -->
+    <dimen name="current_temp_icon">96dp</dimen>
+    <dimen name="list_icon">40dp</dimen>
+    <dimen name="current_temp_text_size">72sp</dimen>
+    <dimen name="current_temp_detail_top_margin">8dp</dimen>
+    <dimen name="current_temp_detail_text_size">20sp</dimen>
+    <dimen name="current_temp_bottom_margin">32dp</dimen>
+
 </resources>
